editor: fix spacing of dropdowns in editor menu

--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -159,13 +159,6 @@ a:focus-visible {
   outline: var(--link-color) dotted 2px;
 }
 
-/* fake fieldsets to work around browser bugs with <fieldset> */
-.fieldset {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
 button,
 input,
 textarea {
